--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,6 +40,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          file: src/main/docker/Dockerfile.jvm
           push: true
           tags: pedrofraca/tourapp:$GITHUB_SHA
           build-args: |
