changes in the action

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
       # Runs a single command using the runners shell
       - uses: eskatos/gradle-command-action@v1
         with:
-          arguments: build
+          arguments: build -Dpassword=${{ secrets.PASSWORD }} -Dusername=${{ secrets.USERNAME }}
       -
         name: Login to DockerHub
         uses: docker/login-action@v1 
