--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,12 +44,10 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          context: .
           file: src/main/docker/Dockerfile.jvm
           push: true
           tags: pedrofraca/tourapp:${{ steps.vars.outputs.sha_short }}
-          build-args: |
-            arg1=value1
-            arg2=value2
       -
         name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
