--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,14 +27,17 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-
       # Runs a single command using the runners shell
-      - uses: gradle/gradle-build-action@v2
+      - uses: actions/setup-java@v1
         with:
-          arguments: build
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          GITHUB_ACTOR: ${{ github.actor }}
+          java-version: 17
+        - name: Setup Gradle
+          uses: gradle/gradle-build-action@v2
+          with:
+            arguments: build
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+            GITHUB_ACTOR: ${{ github.actor }}
       -
         name: Login to DockerHub
         uses: docker/login-action@v1 
